Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjIntegerField.quorum
class Main
    number num
    action Main
        num = cast(number, 5)
        if num:GetValue() = 5.0
            output "passed"
        end
    end
end