Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanNumber.quorum
class Main
    action Main
        boolean bool
        bool = cast(boolean, 7.5)
    end
end